# hackathon-todo-phase2

./: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_create_task_table.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  deps.py  health.py  tasks.py
src/db/: __init__.py  session.py
src/models/: __init__.py  task.py
tests/: __init__.py
