# Task ID: T001 - Python project configuration
[project]
name = "todo-backend"
version = "1.0.0"
description = "Phase 2 Todo Full-Stack Web Application - Backend"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
